Fixed vote and bookmark buttons visibility

--- a/client/forum/topic/topic.styl
+++ b/client/forum/topic/topic.styl
@@ -58,6 +58,12 @@
   .forum-post__reply
     display none
 
+  .forum-post__votes
+  .forum-post__vote-up
+  .forum-post__vote-down
+  .forum-post__bookmark
+    display none
+
 
 // TODO: move to separate block when menu complete
 .forum-topic__tracking
